[workspace]

members = [
    "2018/day01",
    "2018/day02",
    "2018/day03",
    "2018/day04",
    "2018/day05",
    "2018/day06",
    "2018/day07",
    "2018/day08",
    "2018/day09",
    "2018/day10",
    "2018/day11",
    "2018/day12",
    "2019/day01",
    "2019/day02",
    "2019/day03",
    "2019/day04",
    "2019/day05",
    "2019/day06",
    "2019/day07",
    "2019/day08",
    "2019/day09",
    "2019/day10",
    "2019/day11",
    "2019/day12",
]
