[workspace]

members = [
    "2018/day01",
    "2018/day02",
    "2018/day03",
    "2018/day04",
    "2018/day05",
    "2018/day06",
    "2018/day07",
    "2018/day08",
    "2018/day09",
    "2018/day10",
    "2018/day11",
    "2018/day12",
    "2018/day13",
    "2019/day01",
    "2019/day02",
    "2019/day03",
    "2019/day04",
    "2019/day05",
    "2019/day06",
    "2019/day07",
    "2019/day08",
    "2019/day09",
    "2019/day10",
    "2019/day11",
    "2019/day12",
    "2019/day13",
    "2019/day14",
    "2019/day15",
    "2019/day16",
    "2019/day17",
    "2019/day18",
    "2019/day19",
    "2019/day20",
    "2019/day21",
    "2019/day22",
    "2019/day23",
    "2019/day24",
    "2019/day25",
    "2020/day01",
    "2020/day02",
    "2020/day03",
    "2020/day04",
    "2020/day05",
    "2020/day06",
    "2020/day07",
    "2020/day08",
    "2020/day09",
    "2020/day10",
    "2020/day11",
    "2020/day12",
    "2020/day13",
    "2020/day14",
    "2020/day15",
    "2020/day16",
    "2020/day17",
    "2020/day18",
]
