[package]
name = "day04-2018"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "day04-2018-part1"
path = "src/part1.rs"

[[bin]]
name = "day04-2018-part2"
path = "src/part2.rs"

[dependencies]
combine = "3.6.3"
chrono = "0.4.6"
