[package]
name = "day07-2018"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"

[lib]
name = "day07"
path = "src/lib.rs"

[[bin]]
name = "day07-2018-part1"
path = "src/part1.rs"

[[bin]]
name = "day07-2018-part2"
path = "src/part2.rs"

[dependencies]
combine = "3.6.3"
