[package]
name = "day12"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"

[lib]
name = "day12"
path = "src/lib.rs"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[dependencies]
combine = "3.6.3"
failure = "0.1.3"
lazy_static = "1.2.0"
